working swagger docs with goals
